--- a/TENCAR/Base.lproj/Main.storyboard
+++ b/TENCAR/Base.lproj/Main.storyboard
@@ -506,7 +506,12 @@
                                             <action selector="next_screen:" destination="5IL-MH-2fp" eventType="touchUpInside" id="w1B-0j-6CS"/>
                                         </connections>
                                     </button>
-                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BlL-GD-WwO">
+                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSx-kw-chy">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="413"/>
+                                        <animations/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BlL-GD-WwO">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="413"/>
                                         <subviews>
                                             <webView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sx0-d9-peP">
@@ -600,7 +605,6 @@
                                             </button>
                                         </subviews>
                                         <animations/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="sx0-d9-peP" secondAttribute="trailing" constant="20" id="1KK-OZ-2Xi"/>
                                             <constraint firstItem="sx0-d9-peP" firstAttribute="top" secondItem="BlL-GD-WwO" secondAttribute="top" constant="20" id="38C-eD-FJu"/>
@@ -635,6 +639,7 @@
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="667" id="0vu-fn-tFq"/>
+                                    <constraint firstItem="DsY-cC-XLB" firstAttribute="top" secondItem="kSx-kw-chy" secondAttribute="bottom" id="8wu-iO-PtV"/>
                                     <constraint firstItem="BlL-GD-WwO" firstAttribute="leading" secondItem="9lj-UC-ycQ" secondAttribute="leading" id="Ch5-46-hDP"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="centerX" secondItem="9lj-UC-ycQ" secondAttribute="centerX" id="D2T-JG-SCV"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="width" secondItem="9lj-UC-ycQ" secondAttribute="height" multiplier="1:15" id="GPz-36-HUi"/>
@@ -647,14 +652,18 @@
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="width" secondItem="9lj-UC-ycQ" secondAttribute="width" priority="50" id="W0m-kZ-ZUF"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="width" secondItem="9lj-UC-ycQ" secondAttribute="width" priority="249" id="YaS-O4-smu"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="375" id="bCg-ze-yoD"/>
+                                    <constraint firstItem="kSx-kw-chy" firstAttribute="top" secondItem="9lj-UC-ycQ" secondAttribute="top" id="cKP-ka-P2j"/>
+                                    <constraint firstAttribute="trailing" secondItem="kSx-kw-chy" secondAttribute="trailing" id="cMa-g1-bCW"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="375" id="dGL-oi-B4A"/>
                                     <constraint firstAttribute="bottom" secondItem="DsY-cC-XLB" secondAttribute="bottom" id="eoK-J4-XM4"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="centerY" secondItem="9lj-UC-ycQ" secondAttribute="centerY" id="fP6-Tr-HDp"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="top" secondItem="BlL-GD-WwO" secondAttribute="bottom" id="g9E-RU-7IS"/>
+                                    <constraint firstAttribute="bottom" secondItem="kSx-kw-chy" secondAttribute="bottom" id="hey-r6-xTl"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="width" secondItem="9lj-UC-ycQ" secondAttribute="width" multiplier="2" priority="100" id="jug-nG-UzT"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="500" id="kR3-RZ-neW"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="leading" secondItem="9lj-UC-ycQ" secondAttribute="leading" id="nR5-jG-Ocr"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="667" id="q1F-br-h0m"/>
+                                    <constraint firstItem="kSx-kw-chy" firstAttribute="leading" secondItem="9lj-UC-ycQ" secondAttribute="leading" id="qhE-m8-5Fc"/>
                                     <constraint firstAttribute="bottom" secondItem="DsY-cC-XLB" secondAttribute="bottom" priority="100" id="uJT-Xu-vUg"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="leading" secondItem="9lj-UC-ycQ" secondAttribute="leading" id="vBT-mO-Sxo"/>
                                     <constraint firstItem="DsY-cC-XLB" firstAttribute="leading" secondItem="9lj-UC-ycQ" secondAttribute="leading" priority="100" id="vcE-XL-xAS"/>
@@ -666,6 +675,7 @@
                                         <exclude reference="dGL-oi-B4A"/>
                                         <exclude reference="kR3-RZ-neW"/>
                                         <exclude reference="q1F-br-h0m"/>
+                                        <exclude reference="hey-r6-xTl"/>
                                         <exclude reference="D2T-JG-SCV"/>
                                         <exclude reference="GPz-36-HUi"/>
                                         <exclude reference="Qzw-Se-G2s"/>
@@ -1671,10 +1681,10 @@
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="haveClearDone" value="YES"/>
                                                 </userDefinedRuntimeAttributes>
                                             </textField>
-                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uga-jC-HZY">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uga-jC-HZY">
                                                 <rect key="frame" x="0.0" y="185" width="375" height="75"/>
                                                 <animations/>
-                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" red="0.0" green="0.73333333329999995" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="75" id="gXk-TO-y7S"/>
                                                 </constraints>
@@ -1687,11 +1697,11 @@
                                                 <animations/>
                                                 <string key="text">Привязка кредитной карты обязательна и требуется для мгновенного бронирования автомобиля, а так же своевременного погашения штрафов ГИБДД.</string>
                                                 <fontDescription key="fontDescription" name="ALSSchlangesans" family="ALSSchlangesans" pointSize="14"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.99215692280000001" green="0.99607849120000003" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="warn_personal" translatesAutoresizingMaskIntoConstraints="NO" id="PKM-Ns-WCG">
-                                                <rect key="frame" x="20" y="200" width="40" height="40"/>
+                                                <rect key="frame" x="20" y="203" width="40" height="40"/>
                                                 <animations/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="n2M-vd-YRp"/>
@@ -1797,7 +1807,7 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="8vN-9P-FwX" secondAttribute="trailing" constant="20" id="0DU-qf-81l"/>
                                             <constraint firstItem="BL2-uX-zme" firstAttribute="leading" secondItem="PKM-Ns-WCG" secondAttribute="trailing" constant="10" id="0XY-vc-jey"/>
-                                            <constraint firstItem="PKM-Ns-WCG" firstAttribute="centerY" secondItem="uga-jC-HZY" secondAttribute="centerY" constant="-3" id="2nX-SZ-M4H"/>
+                                            <constraint firstItem="PKM-Ns-WCG" firstAttribute="centerY" secondItem="uga-jC-HZY" secondAttribute="centerY" id="2nX-SZ-M4H"/>
                                             <constraint firstItem="5Zz-x1-gub" firstAttribute="top" secondItem="bMk-qx-Lfn" secondAttribute="bottom" id="4bO-dg-WDq"/>
                                             <constraint firstItem="8vN-9P-FwX" firstAttribute="leading" secondItem="oDk-3X-a2T" secondAttribute="leading" constant="20" id="5gO-OJ-i4R"/>
                                             <constraint firstItem="PKM-Ns-WCG" firstAttribute="leading" secondItem="oDk-3X-a2T" secondAttribute="leading" constant="20" id="5nb-qr-kcY"/>
