--- a/TENCAR/Base.lproj/Main.storyboard
+++ b/TENCAR/Base.lproj/Main.storyboard
@@ -432,11 +432,12 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="precache_webview" destination="RDe-Ew-aTX" id="UFY-pV-89d"/>
+                        <segue destination="EuW-4v-oLa" kind="show" identifier="go_dasboard" id="meA-Ef-fpu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJp-7e-Pbg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="82" y="342"/>
+            <point key="canvasLocation" x="-534" y="328"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r0a-QO-ZcQ">
@@ -459,7 +460,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="54y-Ih-lOy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-240" y="-403"/>
+            <point key="canvasLocation" x="-1680" y="328"/>
         </scene>
         <!--ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ-->
         <scene sceneID="LeW-Ae-C9a">
@@ -740,7 +741,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TZf-jr-N96" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="467" y="-403"/>
+            <point key="canvasLocation" x="175" y="-519"/>
         </scene>
         <!--Panels Controller-->
         <scene sceneID="Rgx-7f-7SZ">
@@ -759,7 +760,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XFR-4C-w5o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1096" y="328"/>
+            <point key="canvasLocation" x="175" y="1104"/>
         </scene>
         <!--ViewController-->
         <scene sceneID="EMH-KN-yfD">
@@ -779,7 +780,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GgN-Ww-Q1D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1096" y="997"/>
+            <point key="canvasLocation" x="869" y="1833"/>
         </scene>
         <!--Leftmenu Table View Controller-->
         <scene sceneID="xeO-PY-aDt">
@@ -905,7 +906,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wmb-IY-uHu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="419" y="997"/>
+            <point key="canvasLocation" x="175" y="1833"/>
         </scene>
         <!--Navbar View Controller-->
         <scene sceneID="XsX-a9-SHR">
@@ -915,11 +916,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
-                        <color key="tintColor" red="0.2274509804" green="0.21960784310000001" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="barTintColor" red="0.95294117649999999" green="0.90196078430000004" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.99215692280000001" green="0.99607849120000003" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="barTintColor" red="0.0" green="0.71764705882352942" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" name="ALSSchlangesans" family="ALSSchlangesans" pointSize="16"/>
-                            <color key="textColor" red="0.2274509804" green="0.21960784310000001" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" name="ALSSchlangesans" family="ALSSchlangesans" pointSize="14"/>
+                            <color key="textColor" red="0.99215692280000001" green="0.99607849120000003" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <connections>
@@ -928,7 +929,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8X0-J5-hqW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1759" y="328"/>
+            <point key="canvasLocation" x="869" y="1104"/>
         </scene>
         <!--Rightmenu View Controller-->
         <scene sceneID="EaY-77-qMl">
@@ -1135,7 +1136,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wtR-ZK-ugK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1759" y="991"/>
+            <point key="canvasLocation" x="1540" y="1833"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jlD-yJ-S1m">
@@ -1153,7 +1154,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JEh-sA-GIS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1101.75" y="1648.5"/>
+            <point key="canvasLocation" x="1540" y="2552"/>
         </scene>
         <!--ПЕРСОНАЛЬНЫЕ ДАННЫЕ-->
         <scene sceneID="HqK-SD-9Ot">
@@ -1585,7 +1586,9 @@
                             <constraint firstItem="qwe-fo-hxv" firstAttribute="top" secondItem="jOO-SF-KWE" secondAttribute="bottom" priority="900" id="lgE-bD-00I"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="ПЕРСОНАЛЬНЫЕ ДАННЫЕ" id="Sti-sE-7GK"/>
+                    <navigationItem key="navigationItem" title="ПЕРСОНАЛЬНЫЕ ДАННЫЕ" id="Sti-sE-7GK">
+                        <barButtonItem key="backBarButtonItem" title=" " id="FVV-Fv-aWg"/>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="scroll_reg" destination="hCB-SR-Ja9" id="cqU-ha-T7a"/>
@@ -1594,7 +1597,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d4e-jO-NJq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1129" y="-403"/>
+            <point key="canvasLocation" x="869" y="-519"/>
         </scene>
         <!--ПОДТВЕРЖДЕНИЕ ДАННЫХ-->
         <scene sceneID="gzF-PW-HEE">
@@ -1605,23 +1608,23 @@
                         <viewControllerLayoutGuide type="bottom" id="IRK-rm-6VF"/>
                     </layoutGuides>
                     <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="YvU-Zo-Obo">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="A9k-KX-lpq">
-                                <rect key="frame" x="0.0" y="64" width="768" height="960"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <animations/>
                             </imageView>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xrW-al-g5Y">
-                                <rect key="frame" x="197" y="179" width="375" height="667"/>
+                                <rect key="frame" x="113" y="64" width="375" height="473"/>
                                 <subviews>
                                     <view clipsSubviews="YES" alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cZy-8S-dE3">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="413"/>
                                         <animations/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <scrollView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oDk-3X-a2T">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="413"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJ5-pC-gqW">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
@@ -1870,7 +1873,7 @@
                                         </variation>
                                     </scrollView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mtg-PO-c1f">
-                                        <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                                        <rect key="frame" x="0.0" y="413" width="375" height="60"/>
                                         <animations/>
                                         <color key="backgroundColor" red="0.0" green="0.71764705880000002" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -1917,14 +1920,13 @@
                     </view>
                     <navigationItem key="navigationItem" title="ПОДТВЕРЖДЕНИЕ ДАННЫХ" id="syi-Fg-pUj"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
                         <outlet property="scroll_reg" destination="oDk-3X-a2T" id="TZu-e8-aJs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cuG-Od-A7P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1796" y="-403"/>
+            <point key="canvasLocation" x="1540" y="-519"/>
         </scene>
     </scenes>
     <resources>
